# yt-lesson-planner

./: .env.example  README.md
backend/: README.md  pyproject.toml
backend/notebooks/: test.ipynb
backend/search_data/: search_results_Generative AI basics explained.json  search_results_QLoRA fine-tuning tutorial for language models setup, implementation, evaluation, and applications.json  search_results_basic Spanish vocabulary and phrases, fundamental Spanish grammar, conversational Spanish practice for beginners.json  search_results_design a mobile app.json  search_results_essential survival supplies and equipment on a stranded boat, sourcing and purifying water in ocean, signaling for rescue, maintaining health while stranded.json  search_results_graphic design basics tutorial for beginners.json  search_results_how to survive on a stranded boat in the ocean.json  search_results_learn basic Spanish vocabulary and phrases, practice listening and speaking with native speakers, read simple Spanish texts.json  search_results_optimize diffusion model for image generation tutorial.json  search_results_survival skills on stranded boat ocean food water signaling for help.json
backend/tests/: test_video.py
backend/youtube_lesson_planner/: app.py  graph.py  schemas.py  supabase_client.py  utils.py  video.py
backend/youtube_lesson_planner/nodes/: generate_plan.py  get_transcripts.py  learning_objectives.py  planner.py  query_rewriter.py  search_videos.py
backend/youtube_lesson_planner/tools/: get_transcripts.py  query_rewriter.py  search_videos.py
frontend/: bun.lockb  (+1 more)
(+15 files in other folders)
