[tool.poetry]
name = "youtube-lesson-planner"
version = "0.0.2"
description = "A tool to generate lesson plans from YouTube videos"
authors = ["Lakshya Agarwal <lakshyajannu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.1.5"
google-api-python-client = "^2.136.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
rich = "^13.7.1"
python-dotenv = "^1.0.1"
langsmith = "^0.1.84"
youtube-transcript-api = "^0.6.2"
langchain = "^0.2.6"
langchain-core = "^0.2.11"
langchain-community = "^0.2.6"
pytube = "^15.0.0"
langchain-openai = "^0.1.14"
langchain-qdrant = "^0.1.1"
langserve = {extras = ["all"], version = "^0.2.2"}
fastapi = "^0.111.0"
uvicorn = "^0.30.1"

[tool.poetry.scripts]
start = "youtube_lesson_planner.app:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
